syntax = "proto3";

option go_package = "generated/dir";

service DirService {
   rpc UploadDir(UploadDirReq) returns (UploadDirRes) {}
   rpc RenameDir(RenameDirReq) returns (RenameDirRes) {}
   rpc DeleteDir(DeleteDirReq) returns (DeleteDirRes) {}
}

// UploadDir Message
message UploadDirReq {
   Dir      dir = 1;
   string   pathname = 2;
}

message UploadDirRes {
   int32    returnCode = 1;
   string   message = 2;
}

// RenameDir Message
message RenameDirReq {
   string oldName = 1;
   string newName = 2;
   string pathName = 3;
}

message RenameDirRes {
   int32 returnCode = 1;
   string message = 2;
}

// DeleteDir Message
message DeleteDirReq {
   string dirName = 1;
   string pathName = 2;
}

message DeleteDirRes {
   int32 returnCode = 1;
   string message = 2;
}

// Generic Message
message Dir {
   string name = 1;
}
