syntax = "proto3";

option go_package = "generated/";

service UserService {
  rpc CreateUser(CreateUserReq) returns(CreateUserRes) {}
  rpc SignIn(SignInReq) returns(SignInRes) {}
}

// SignIn Message
message SignInReq {
  User  user = 1;
}

message SignInRes {
  int32 returnCode = 1;
  string  message = 2;
}

// CreateUser Message
message CreateUserReq {
  User  user = 1;
}

message CreateUserRes {
  int32 returnCode = 1;
  string message = 2;
}

// Generic message
message User {
  string userName = 1;
  string password = 2;
}